                                            Changes in sqsh-2.5

                                New features, improvements and bug fixes:

1 - Feature -     Print messages to File (P2F).
                  With this feature you can now set a threshold on the number of error messages or print statements
                  that will be shown on screen for the current batch. If the threshold is exceeded, the remainder
                  of the messages will be written to a file. The threshold is specified with variable $p2faxm and the
                  filename by $p2fname.
                  By default the threshold variable $p2faxm and the filename $p2fname are set to NULL, which means
                  that the feature is disabled. If the threshold value is set to 0, then the feature is still disabled.
                  If you set both these variables then the feature is enabled when you run SQSH interactively.

                  For example: Suppose a heap table "inventory" exists which is accidentally loaded twice using bcp
                  and you want to build a clustered index on that table while ignoring the duplicate
                  rows. To prevent an overflow of warning messages on screen you now could do:

                  SYBASE.sa.tempdb.1> \set p2fname="~/tmp/sqsh_p2f.out"
                  SYBASE.sa.tempdb.1> \set p2faxm=10
                  SYBASE.sa.tempdb.1> create clustered index inventory_cx on inventory(id) with ignore_dup_row
                  SYBASE.sa.tempdb.2> go
                  Warning: deleted duplicate row.  Primary key is '0'
                  Warning: deleted duplicate row.  Primary key is '1'
                  Warning: deleted duplicate row.  Primary key is '2'
                  Warning: deleted duplicate row.  Primary key is '3'
                  Warning: deleted duplicate row.  Primary key is '4'
                  Warning: deleted duplicate row.  Primary key is '5'