@@ -149,7 +149,7 @@
 /*
  * Current version number.
  */
-#define SQSH_VERSION     "sqsh-2.5.16"
+#define SQSH_VERSION     "sqsh-2.5.16.1"
 
 #if !defined(__ansi__)
 #  if defined(__STDC__) || defined(STDC_HEADERS) || defined(PROTOTYPES)
